syntax = "proto3";

package greeting.v1;

option go_package = "github.com/organic-programming/go-dart-holons/examples/greeting-daemon/gen/go/greeting/v1;greetingv1";

service GreetingService {
  // Returns all available greeting languages.
  rpc ListLanguages(ListLanguagesRequest) returns (ListLanguagesResponse);
  // Greets the user in the chosen language.
  rpc SayHello(SayHelloRequest) returns (SayHelloResponse);
}

message ListLanguagesRequest {}

message ListLanguagesResponse {
  repeated Language languages = 1;
}

message Language {
  string code = 1;      // ISO 639-1: "fr"
  string name = 2;      // "French"
  string native = 3;    // "Fran√ßais"
}

message SayHelloRequest {
  string name = 1;
  string lang_code = 2; // ISO 639-1 code chosen by the UI
}

message SayHelloResponse {
  string greeting = 1;  // "Bonjour, Alice !"
  string language = 2;  // "French"
  string lang_code = 3; // "fr"
}
